# Nairobi-stock-Exchange

./: .gitignore  PROJECT_CONTEXT.md  README.md  REPORT_COMMANDS.md  indicators.txt  pyproject.toml
.github/workflows/: daily-report.yml  monthly-report.yml  weekly-report.yml
NSE_DATA/: NSE_data_all_stocks_2007.csv  NSE_data_all_stocks_2008.csv  NSE_data_all_stocks_2009.csv  NSE_data_all_stocks_2010.csv  NSE_data_all_stocks_2011.csv  NSE_data_all_stocks_2012.csv  NSE_data_stock_market_sectors_2013.csv  NSE_data_stock_market_sectors_2020.csv  NSE_data_stock_market_sectors_2021.csv  NSE_data_stock_market_sectors_2022.csv  NSE_data_stock_market_sectors_2023_2024.csv
reports/daily/: 2026-02-18.md  2026-02-19.md
reports/monthly/: 2026-02.md
reports/weekly/: 2026-02-19.md
research/: 01_data_foundation.ipynb
research/data/: ticker_master.parquet
research/reports/: phase1_data_quality.md  phase1_eda_summary.md
scripts/: run_daily_task.cmd  run_daily_task.ps1  run_monthly_task.cmd  run_monthly_task.ps1  run_monthly_task.sh  run_weekly_task.cmd  run_weekly_task.ps1  run_weekly_task.sh  setup_cron.sh  setup_monthly_task.ps1  setup_weekly_task.ps1  setup_windows_task.ps1
src/nse_analysis/: __init__.py  cli.py  config.py
src/nse_analysis/data/: __init__.py  fetcher.py  validator.py
src/nse_analysis/database/: __init__.py  connection.py  metadata.py  queries.py
src/nse_analysis/indicators/: __init__.py  calculator.py  feasibility.py  registry.py
src/nse_analysis/utils/: logger.py  (+1 more)
tests/: test_calculator.py  test_registry_and_feasibility.py  test_validator.py
(+3 files in other folders)
